--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.queryall</groupId>
   <artifactId>queryall-api</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.9.2-SNAPSHOT</version>
   <name>queryall-api</name>
   <url>http://bio2rdf.wiki.sourceforge.net/</url>
   <dependencies>
@@ -18,6 +18,26 @@
     	<artifactId>sesame-model</artifactId>
     	<groupId>org.openrdf.sesame</groupId>
     	<type>jar</type>
-    	<version>2.3.2</version></dependency>
+    	<version>2.3.2</version>
+    </dependency>
+    <dependency>
+    	<artifactId>sesame-repository-api</artifactId>
+    	<groupId>org.openrdf.sesame</groupId>
+    	<type>jar</type>
+    	<version>2.3.2</version>
+    </dependency>
   </dependencies>
+  <build>
+  	<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
