--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   <version>0.9.2-SNAPSHOT</version>
   <name>queryall</name>
-  <url>http://maven.apache.org</url>
+  <url>http://bio2rdf.wiki.sourceforge.net</url>
   <dependencies>
     <dependency>
       <groupId>org.queryall</groupId>
@@ -80,8 +80,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
     </plugins>
