--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -4,14 +4,14 @@
   <groupId>org.queryall</groupId>
   <artifactId>queryall</artifactId>
   <packaging>jar</packaging>
-  <version>0.9.2-SNAPSHOT</version>
+  <version>0.10.0-SNAPSHOT</version>
   <name>queryall</name>
   <url>http://bio2rdf.wiki.sourceforge.net</url>
   <dependencies>
     <dependency>
       <groupId>org.queryall</groupId>
       <artifactId>queryall-api</artifactId>
-      <version>0.9.2-SNAPSHOT</version>
+      <version>0.10.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -71,6 +71,13 @@
       <artifactId>servlet-api</artifactId>
       <version>2.4</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-log4j12</artifactId>
+    	<version>1.5.6</version>
+    	<type>jar</type>
+    	<scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
