--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -11,8 +11,15 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.8.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<artifactId>sesame-sail-memory</artifactId>
+    	<groupId>org.openrdf.sesame</groupId>
+    	<type>jar</type>
+    	<version>2.3.2</version>
+		<scope>test</scope>
     </dependency>
     <dependency>
     	<artifactId>sesame-model</artifactId>
@@ -32,12 +39,32 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
       </plugin>
+		<!-- Added test excludes for Abstract -->
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <configuration>
+		      <excludes>
+		        <exclude>**/Abstract*</exclude>
+		      </excludes>
+		    </configuration>
+		</plugin>
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>test-jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
