--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -1,96 +1,125 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.queryall</groupId>
-  <artifactId>queryall</artifactId>
-  <packaging>jar</packaging>
-  <version>0.10.0-SNAPSHOT</version>
-  <name>queryall</name>
-  <url>http://bio2rdf.wiki.sourceforge.net</url>
-  <dependencies>
-    <dependency>
-      <groupId>org.queryall</groupId>
-      <artifactId>queryall-api</artifactId>
-      <version>0.10.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<artifactId>log4j</artifactId>
-    	<groupId>log4j</groupId>
-    	<version>1.2.16</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-model</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-repository-sail</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-rio-ntriples</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-rio-rdfxml</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-rio-n3</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-sail-memory</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-queryparser-sparql</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.4</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-log4j12</artifactId>
-    	<version>1.5.6</version>
-    	<type>jar</type>
-    	<scope>runtime</scope>
-    </dependency>
-  </dependencies>
-  <build>
-  	<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.queryall</groupId>
+	<artifactId>queryall</artifactId>
+	<packaging>jar</packaging>
+	<version>0.10.0-SNAPSHOT</version>
+	<name>queryall</name>
+	<url>http://bio2rdf.wiki.sourceforge.net</url>
+	<dependencies>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>0.10.0-SNAPSHOT</version>
+	    	<scope>compile</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>0.10.0-SNAPSHOT</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>log4j</artifactId>
+			<groupId>log4j</groupId>
+			<version>1.2.16</version>
+	    	<scope>compile</scope>
+	    	<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-model</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-repository-sail</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-ntriples</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-rdfxml</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-n3</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-sail-memory</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-queryparser-sparql</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+	    	<scope>compile</scope>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.6</version>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<!-- Added test excludes for Abstract -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/Abstract*</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
