--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -39,6 +39,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -48,6 +49,7 @@
 		<plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>2.7.1</version>
 		    <configuration>
 		      <excludes>
 		        <exclude>**/Abstract*</exclude>
@@ -57,6 +59,7 @@
 		<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
+            <version>2.3.1</version>
             <executions>
                 <execution>
                     <goals>
