--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -113,6 +113,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.1</version>
 				<configuration>
 					<excludes>
 						<exclude>**/Abstract*</exclude>
