--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -99,6 +99,12 @@
 		</dependency>
 	</dependencies>
 	<build>
+	    <resources>
+	      <resource>
+	        <directory>src/test/resources</directory>
+	        <filtering>true</filtering>
+	      </resource>
+	    </resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -122,4 +128,7 @@
 			</plugin>
 		</plugins>
 	</build>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
