--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -1,73 +1,108 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.queryall</groupId>
-  <artifactId>queryall-api</artifactId>
-  <packaging>jar</packaging>
-  <version>0.10.0-SNAPSHOT</version>
-  <name>queryall-api</name>
-  <url>http://bio2rdf.wiki.sourceforge.net/</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-sail-memory</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-		<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-model</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-    <dependency>
-    	<artifactId>sesame-repository-api</artifactId>
-    	<groupId>org.openrdf.sesame</groupId>
-    	<type>jar</type>
-    	<version>2.3.2</version>
-    </dependency>
-  </dependencies>
-  <build>
-  	<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-		<!-- Added test excludes for Abstract -->
-		<plugin>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-surefire-plugin</artifactId>
-		    <version>2.7.1</version>
-		    <configuration>
-		      <excludes>
-		        <exclude>**/Abstract*</exclude>
-		      </excludes>
-		    </configuration>
-		</plugin>
-		<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.3.1</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>test-jar</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.queryall</groupId>
+	<artifactId>queryall-api</artifactId>
+	<packaging>jar</packaging>
+	<version>0.10.0-SNAPSHOT</version>
+	<name>queryall-api</name>
+	<url>http://bio2rdf.wiki.sourceforge.net/</url>
+	<developers>
+		<developer>
+			<id>p_ansell</id>
+			<email>p_ansell@yahoo.com</email>
+			<name>Peter Ansell</name>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>GNU General Public License 3.0</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<scm>
+		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-api</connection>
+		<developerConnection>scm:git:ssh://p_ansell@bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-api</developerConnection>
+		<url>http://bio2rdf.git.sourceforge.net/</url>
+	</scm>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-sail-memory</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<version>2.3.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-model</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-repository-api</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<version>2.3.2</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<!-- Added test excludes for Abstract -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.1</version>
+				<configuration>
+					<excludes>
+						<exclude>**/Abstract*</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>aduna-repo</id>
+			<name>Aduna repository</name>
+			<url>http://repo.aduna-software.org/maven2/releases</url>
+		</repository>
+		<repository>
+			<id>on.cs.unibas.ch</id>
+			<name>DBIS Maven Releases Repository</name>
+			<url>http://on.cs.unibas.ch/maven/repository</url>
+		</repository>
+	</repositories>
 </project>
