queryall pom.xml modification

--- a/queryall/pom.xml
+++ b/queryall/pom.xml
@@ -121,6 +121,10 @@
 				<directory>src/test/resources</directory>
 				<filtering>true</filtering>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
 		</resources>
 		<plugins>
 			<plugin>
