--- a/queryall-reasoner/pom.xml
+++ b/queryall-reasoner/pom.xml
@@ -43,6 +43,18 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.6.4</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.7</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -62,6 +74,11 @@
 			<id>aduna-repo</id>
 			<name>Aduna repository</name>
 			<url>http://repo.aduna-software.org/maven2/releases</url>
+		</repository>
+		<repository>
+			<id>open-jena</id>
+			<name>Open Jena</name>
+			<url>http://www.openjena.org/repo</url>
 		</repository>
 		<repository>
 			<id>on.cs.unibas.ch</id>
