--- a/queryall-reasoner/pom.xml
+++ b/queryall-reasoner/pom.xml
@@ -41,6 +41,12 @@
 	</scm>
 	<dependencies>
 		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall</artifactId>
+			<version>0.10.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
@@ -64,6 +70,12 @@
 			<version>2.8.7</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>ca.wilkinsonlab.sadi</groupId>
+			<artifactId>sadi-share</artifactId>
+			<version>0.1.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -75,6 +87,32 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-source</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+				<executions>
+					<execution>
+						<id>attach-javadoc</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -93,6 +131,11 @@
 			<id>on.cs.unibas.ch</id>
 			<name>DBIS Maven Releases Repository</name>
 			<url>http://on.cs.unibas.ch/maven/repository</url>
+		</repository>
+		<repository>
+			<id>sadi-repo</id>
+			<name>SADI Maven Repository</name>
+			<url>http://dev.biordf.net/maven/</url>
 		</repository>
 	</repositories>
 </project>
