--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -8,6 +8,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<name>queryall-api</name>
 	<url>http://bio2rdf.wiki.sourceforge.net/</url>
+	<inceptionYear>2007</inceptionYear>
 	<developers>
 		<developer>
 			<id>p_ansell</id>
