--- a/queryall-reasoner/pom.xml
+++ b/queryall-reasoner/pom.xml
@@ -8,6 +8,7 @@
 	<packaging>jar</packaging>
 	<name>queryall-reasoner</name>
 	<url>http://bio2rdf.wiki.sourceforge.net/</url>
+	<inceptionYear>2011</inceptionYear>
 	<developers>
 		<developer>
 			<id>p_ansell</id>
