--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.queryall</groupId>
-	<artifactId>queryall-api</artifactId>
+	<artifactId>queryall-lib</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0</version>
-	<name>queryall-api</name>
-	<url>http://bio2rdf.wiki.sourceforge.net/</url>
+	<name>queryall</name>
+	<url>http://bio2rdf.wiki.sourceforge.net</url>
 	<inceptionYear>2007</inceptionYear>
 	<developers>
 		<developer>
@@ -36,40 +36,120 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<scm>
-		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-api</connection>
-		<developerConnection>scm:git:ssh://p_ansell@bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-api</developerConnection>
+		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall</connection>
+		<developerConnection>scm:git:ssh://p_ansell@bio2rdf.git.sourceforge.net/gitroot/queryall/queryall</developerConnection>
 		<url>http://bio2rdf.git.sourceforge.net/</url>
 	</scm>
 	<dependencies>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>1.0.0</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
 			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>log4j</artifactId>
+			<groupId>log4j</groupId>
+			<version>1.2.16</version>
+			<scope>compile</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-model</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<scope>compile</scope>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-repository-sail</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-ntriples</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-rdfxml</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>sesame-rio-n3</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>rdfjson</artifactId>
+			<groupId>net.fortytwo.sesametools</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<artifactId>nquads</artifactId>
+			<groupId>net.fortytwo.sesametools</groupId>
+			<type>jar</type>
+			<scope>compile</scope>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-sail-memory</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
+			<scope>compile</scope>
 			<version>2.4.0</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<artifactId>sesame-model</artifactId>
+			<artifactId>sesame-queryparser-sparql</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
-			<version>2.4.0</version>
 			<scope>compile</scope>
+			<version>2.4.0</version>
 		</dependency>
 		<dependency>
-			<artifactId>sesame-repository-api</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.1</version>
 			<type>jar</type>
-			<version>2.4.0</version>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -142,5 +222,11 @@
 			<name>DBIS Maven Releases Repository</name>
 			<url>http://on.cs.unibas.ch/maven/repository</url>
 		</repository>
+		<repository>
+			<id>fortytwo.net</id>
+			<name>SesameTools Repository</name>
+			<url>http://fortytwo.net/maven2</url>
+		</repository>
+		
 	</repositories>
 </project>
