--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-webapp</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Queryall Webapp library</name>
 	<url>http://bio2rdf.org</url>
 	<developers>
@@ -42,8 +42,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.queryall</groupId>
-			<artifactId>queryall</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<artifactId>queryall-lib</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>1.0.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
