--- a/queryall-reasoner/pom.xml
+++ b/queryall-reasoner/pom.xml
@@ -33,6 +33,7 @@
 		</mailingList>
 	</mailingLists>
 	<properties>
+		<scala.version>2.8.1</scala.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<scm>
@@ -42,9 +43,15 @@
 	</scm>
 	<dependencies>
 		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>${scala.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.queryall</groupId>
-			<artifactId>queryall</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<artifactId>queryall-lib</artifactId>
+			<version>1.0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -77,6 +84,19 @@
 			<version>0.1.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>3.2</version>
+			<scope>compile</scope>
+		</dependency>
+        <dependency>
+            <groupId>de.fuberlin.wiwiss.r2r</groupId>
+            <artifactId>r2rApi</artifactId>
+            <version>0.2.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/r2rApi-0.2.2.jar</systemPath>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -115,6 +135,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.1</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<outputDirectory>lib</outputDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -138,5 +168,18 @@
 			<name>SADI Maven Repository</name>
 			<url>http://dev.biordf.net/maven/</url>
 		</repository>
+		<repository>
+			<id>scala-tools.org</id>
+			<name>Scala-tools Maven2 repository</name>
+			<url>http://scala-tools.org/repo-releases</url>
+		</repository>
 	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>scala-tools.org</id>
+			<name>Scala-tools Maven2 Repository</name>
+			<url>http://scala-tools.org/repo-releases</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
