--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -51,21 +51,21 @@
 			<artifactId>sesame-sail-memory</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-model</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-repository-api</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
@@ -136,6 +136,13 @@
 			<id>aduna-repo</id>
 			<name>Aduna repository</name>
 			<url>http://repo.aduna-software.org/maven2/releases</url>
+			<releases><enabled>true</enabled></releases>
+		</repository>
+		<repository>
+			<id>aduna-snapshot-repo</id>
+			<name>Aduna snapshot repository</name>
+			<url>http://repo.aduna-software.org/maven2/snapshots</url>
+			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
 		<repository>
 			<id>on.cs.unibas.ch</id>
