--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -73,49 +73,49 @@
 			<artifactId>sesame-model</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-repository-sail</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-rio-ntriples</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-rio-rdfxml</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-rio-n3</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-rio-trix</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-rio-trig</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>rdfjson</artifactId>
@@ -136,14 +136,14 @@
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>sesame-queryparser-sparql</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.4.0</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -230,6 +230,13 @@
 			<id>aduna-repo</id>
 			<name>Aduna repository</name>
 			<url>http://repo.aduna-software.org/maven2/releases</url>
+			<releases><enabled>true</enabled></releases>
+		</repository>
+		<repository>
+			<id>aduna-snapshot-repo</id>
+			<name>Aduna snapshot repository</name>
+			<url>http://repo.aduna-software.org/maven2/snapshots</url>
+			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
 		<repository>
 			<id>on.cs.unibas.ch</id>
