queryall-api pom.xml changes to repositories

--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -137,17 +137,21 @@
 			<name>Aduna repository</name>
 			<url>http://repo.aduna-software.org/maven2/releases</url>
 			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>false</enabled></snapshots>
 		</repository>
 		<repository>
 			<id>aduna-snapshot-repo</id>
 			<name>Aduna snapshot repository</name>
 			<url>http://repo.aduna-software.org/maven2/snapshots</url>
+			<releases><enabled>false</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
 		<repository>
 			<id>on.cs.unibas.ch</id>
 			<name>DBIS Maven Releases Repository</name>
 			<url>http://on.cs.unibas.ch/maven/repository</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>false</enabled></snapshots>
 		</repository>
 	</repositories>
 </project>
