--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>org.queryall</groupId>
+		<artifactId>queryall</artifactId>
+		<version>1</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-lib</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.2-SNAPSHOT</version>
 	<name>queryall</name>
-	<url>http://bio2rdf.wiki.sourceforge.net</url>
+	<url>http://sourceforge.net/apps/mediawiki/bio2rdf/</url>
 	<inceptionYear>2007</inceptionYear>
 	<developers>
 		<developer>
@@ -32,9 +38,6 @@
 			<unsubscribe>https://groups.google.com/group/bio2rdf/subscribe</unsubscribe>
 		</mailingList>
 	</mailingLists>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 	<scm>
 		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall</connection>
 		<developerConnection>scm:git:ssh://p_ansell@bio2rdf.git.sourceforge.net/gitroot/queryall/queryall</developerConnection>
@@ -45,8 +48,8 @@
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
 			<version>1.0.2-SNAPSHOT</version>
-			<scope>compile</scope>
 			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
@@ -59,91 +62,92 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
+			<type>jar</type>
 			<scope>test</scope>
-			<type>jar</type>
 		</dependency>
 		<dependency>
-			<artifactId>log4j</artifactId>
 			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
-			<scope>compile</scope>
 			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-model</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
+			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-repository-sail</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-ntriples</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-rdfxml</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-n3</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-trix</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-trig</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>net.fortytwo.sesametools</groupId>
 			<artifactId>rdfjson</artifactId>
-			<groupId>net.fortytwo.sesametools</groupId>
+			<version>${sesametools.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>1.3</version>
 		</dependency>
 		<dependency>
+			<groupId>net.fortytwo.sesametools</groupId>
 			<artifactId>nquads</artifactId>
-			<groupId>net.fortytwo.sesametools</groupId>
+			<version>${sesametools.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>1.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-sail-memory</artifactId>
-			<groupId>org.openrdf.sesame</groupId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<artifactId>sesame-queryparser-sparql</artifactId>
 			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-queryparser-sparql</artifactId>
+			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -165,15 +169,6 @@
 			</resource>
 		</resources>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
 			<!-- Added test excludes for Abstract -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -185,72 +180,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-source</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>attach-javadoc</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>aduna-repo</id>
-			<name>Aduna repository</name>
-			<url>http://repo.aduna-software.org/maven2/releases</url>
-			<releases><enabled>true</enabled></releases>
-		</repository>
-		<repository>
-			<id>aduna-snapshot-repo</id>
-			<name>Aduna snapshot repository</name>
-			<url>http://repo.aduna-software.org/maven2/snapshots</url>
-			<snapshots><enabled>true</enabled></snapshots>
-		</repository>
-		<repository>
-			<id>on.cs.unibas.ch</id>
-			<name>DBIS Maven Releases Repository</name>
-			<url>http://on.cs.unibas.ch/maven/repository</url>
-			<releases><enabled>true</enabled></releases>
-			<snapshots><enabled>false</enabled></snapshots>
-		</repository>
-		<repository>
-			<id>fortytwo.net</id>
-			<name>SesameTools Repository</name>
-			<url>http://fortytwo.net/maven2</url>
-			<releases><enabled>true</enabled></releases>
-			<snapshots><enabled>false</enabled></snapshots>
-		</repository>
-	</repositories>
 </project>
