--- a/queryall-reasoner/pom.xml
+++ b/queryall-reasoner/pom.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<groupId>org.queryall</groupId>
+		<artifactId>queryall</artifactId>
+		<version>1</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-reasoner</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>queryall-reasoner</name>
-	<url>http://bio2rdf.wiki.sourceforge.net/</url>
+	<url>http://sourceforge.net/apps/mediawiki/bio2rdf/</url>
 	<inceptionYear>2011</inceptionYear>
 	<developers>
 		<developer>
@@ -34,7 +40,6 @@
 	</mailingLists>
 	<properties>
 		<scala.version>2.8.1</scala.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<scm>
 		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-reasoner</connection>
@@ -46,54 +51,63 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>${scala.version}</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-lib</artifactId>
 			<version>1.0.2-SNAPSHOT</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
+			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.owldl</groupId>
 			<artifactId>pellet</artifactId>
 			<version>2.2.2</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
 			<version>2.6.4</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>arq</artifactId>
 			<version>2.8.8</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>ca.wilkinsonlab.sadi</groupId>
 			<artifactId>sadi-share</artifactId>
 			<version>0.1.0</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr</artifactId>
 			<version>3.2</version>
+			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
         <dependency>
             <groupId>de.fuberlin.wiwiss.r2r</groupId>
             <artifactId>r2rApi</artifactId>
             <version>0.2.2</version>
+            <type>jar</type>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/r2rApi-0.2.2.jar</systemPath>
         </dependency>
