--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>org.queryall</groupId>
+		<artifactId>queryall</artifactId>
+		<version>1</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-webapp</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.2-SNAPSHOT</version>
 	<name>Queryall Webapp library</name>
-	<url>http://bio2rdf.org</url>
+	<url>http://sourceforge.net/apps/mediawiki/bio2rdf/</url>
 	<developers>
 		<developer>
 			<id>p_ansell</id>
@@ -31,9 +37,6 @@
 			<unsubscribe>https://groups.google.com/group/bio2rdf/subscribe</unsubscribe>
 		</mailingList>
 	</mailingLists>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 	<scm>
 		<connection>scm:git:git://bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-webapp</connection>
 		<developerConnection>scm:git:ssh://p_ansell@bio2rdf.git.sourceforge.net/gitroot/queryall/queryall-webapp</developerConnection>
@@ -48,15 +51,8 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.queryall</groupId>
-			<artifactId>queryall-api</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<artifactId>velocity</artifactId>
 			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
 			<version>1.6.4</version>
 			<type>jar</type>
 			<scope>compile</scope>
@@ -90,59 +86,12 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-source</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>attach-javadoc</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 	<repositories>
 		<repository>
-			<id>aduna-repo</id>
-			<name>Aduna repository</name>
-			<url>http://repo.aduna-software.org/maven2/releases</url>
-		</repository>
-		<repository>
-			<id>on.cs.unibas.ch</id>
-			<name>DBIS Maven Releases Repository</name>
-			<url>http://on.cs.unibas.ch/maven/repository</url>
-		</repository>
-        <repository>
-            <id>repo.rasea.org</id>
-            <name>Rasea Maven Repository (only for UrlRewrite-3.2.0 while it is not in the standard Maven repos)</name>
-            <url>http://repo.rasea.org/maven2/</url>
-        </repository> 
+		    <id>repo.rasea.org</id>
+		    <name>Rasea Maven Repository (only for UrlRewrite-3.2.0 while it is not in the standard Maven repos)</name>
+		    <url>http://repo.rasea.org/maven2/</url>
+		</repository> 
 	</repositories>
 </project>
