add eclipse launch configurations and add inception year to queryall-webapp/pom.xml

--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -14,6 +14,7 @@
 	<version>1.0.2-SNAPSHOT</version>
 	<name>Queryall Webapp library</name>
 	<url>http://sourceforge.net/apps/mediawiki/bio2rdf/</url>
+	<inceptionYear>2007</inceptionYear>
 	<developers>
 		<developer>
 			<id>p_ansell</id>
