--- a/queryall-lib/src/test/resources/queryall.properties
+++ b/queryall-lib/src/test/resources/queryall.properties
@@ -18,4 +18,4 @@ queryall.namespaceWebApplicationConfiguration=webapp_configuration
 #queryall.BaseConfigLocation=${queryall.BaseConfigLocation}
 #queryall.BaseConfigMimeFormat=${queryall.BaseConfigMimeFormat}
 #queryall.BaseConfigUri=${queryall.BaseConfigUri}
-queryall.Version=${pom.version}
+queryall.Version=${project.version}
