add sparql and xslt factory and parser's
the current bug is that the *NormalisationRuleImpl classes are not being initialised, so the static code to create the NormalisatioinRuleEnum entry never runs before the test is run. for some reason QueryTypeImpl is initialised before the test, so it passes

--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -153,8 +153,10 @@
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
             <version>1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
             <!-- Optional because it is only needed for compilation, and is not needed at runtime -->
-            <optional>true</optional>
+            <!-- <optional>true</optional> -->
         </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
