fix some minor parsing bugs

--- a/queryall-lib-test/src/test/resources/log4j.properties
+++ b/queryall-lib-test/src/test/resources/log4j.properties
@@ -18,6 +18,10 @@ log4j.logger.org.tuckey=WARN
 log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=INFO
+log4j.logger.org.queryall.impl.querytype=INFO
+log4j.logger.org.queryall.impl.rdfrule=INFO
+log4j.logger.org.queryall.impl.ruletest=INFO
+
 log4j.logger.org.bio2rdf=INFO
 
 
