initial complete implementation of RdfInputQueryTypeImpl that passes the matches* tests

--- a/queryall-lib-test/src/test/resources/log4j.properties
+++ b/queryall-lib-test/src/test/resources/log4j.properties
@@ -19,6 +19,7 @@ log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=INFO
 log4j.logger.org.queryall.impl.querytype=INFO
+log4j.logger.org.queryall.impl.querytype.RdfInputQueryTypeImpl=TRACE
 log4j.logger.org.queryall.impl.rdfrule=INFO
 log4j.logger.org.queryall.impl.ruletest=INFO
 
