start adding sparql normalisation test, as addAllMatchingTriples seems to never have been working. delete was implemented previously and is working.

--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -72,6 +72,13 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-repository-sail</artifactId>
+			<version>${sesame.version}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
