--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -6,30 +6,30 @@
 	<parent>
 		<artifactId>queryall</artifactId>
 		<groupId>org.queryall</groupId>
-		<version>1</version>
+		<version>1.1</version>
 	</parent>
 	<artifactId>queryall-lib-test</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>queryall-lib-test</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${queryall.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${queryall.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-lib</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${queryall.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
