--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -4,13 +4,13 @@
 	<parent>
 		<groupId>org.queryall</groupId>
 		<artifactId>queryall</artifactId>
-		<version>1</version>
+		<version>1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>queryall-lib</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>queryall lib</name>
 	<url>http://sourceforge.net/apps/mediawiki/bio2rdf/</url>
 	<inceptionYear>2007</inceptionYear>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${queryall.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
