--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -4,12 +4,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>queryall</artifactId>
+		<artifactId>queryall-parent</artifactId>
 		<groupId>org.queryall</groupId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-lib-test</artifactId>
-	<version>1.1</version>
 	<name>queryall-lib-test</name>
 	<dependencies>
 		<dependency>
