--- a/queryall-ext-provider-http/pom.xml
+++ b/queryall-ext-provider-http/pom.xml
@@ -7,8 +7,8 @@
     <groupId>org.queryall</groupId>
     <version>1.2-SNAPSHOT</version>
   </parent>
-  <artifactId>queryall-ext-rule-owl</artifactId>
-  <name>queryall-ext-rule-owl</name>
+  <artifactId>queryall-ext-provider-http</artifactId>
+  <name>queryall-ext-provider-http</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,14 +21,25 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>com.clarkparsia</groupId>
-    	<artifactId>pellet-owlapiv3</artifactId>
-    	<version>2.3.0</version>
-    </dependency>
-    <dependency>
     	<groupId>org.queryall</groupId>
     	<artifactId>queryall-api</artifactId>
     	<version>${queryall.version}</version>
     </dependency>
+    <dependency>
+    	<groupId>org.queryall</groupId>
+    	<artifactId>queryall-lib</artifactId>
+    	<version>${queryall.version}</version>
+    </dependency>
+		<dependency>
+			<!-- see http://weblogs.java.net/blog/kohsuke/archive/2009/03/my_project_of_t.html -->
+			<groupId>org.kohsuke.metainf-services</groupId>
+			<artifactId>metainf-services</artifactId>
+			<version>1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+			<!-- Optional because it is only needed for compilation, and is not needed 
+				at runtime -->
+			<optional>true</optional>
+		</dependency>
   </dependencies>
 </project>
